# VirtualAudioMix

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: DEMARRAGE_RAPIDE.md  DEPANNAGE.md  PRESETS_ET_PARAMETRES.md  ROUTAGE_AUDIO.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: process_loopback_probe.rs  vam_capture_multiclient_probe.rs  vam_capture_probe.rs  vam_transport_status_probe.rs
src-tauri/installer/: LICENSE-VAM.txt
src-tauri/installer/hooks/: vam-installer-hooks.nsh
src-tauri/installer/languages/: English.nsh  French.nsh
src-tauri/installer/wix/: vam-msi-hooks.wxs
src-tauri/resources/driver/x64/: ComponentizedApoSample.inf  ComponentizedAudioSample.inf  ComponentizedAudioSampleExtension.inf  VAMAudio.sys  package.cer  sysvad.cat
src-tauri/resources/installer/: install-bad-driver.ps1  uninstall-bad-driver.ps1
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/core/: audio_engine.rs  mod.rs
src-tauri/src/app/core/dsp/: buffer.rs  gain.rs  mixer.rs  mod.rs  resampler.rs
src-tauri/src/app/core/graph/: edge.rs  graph.rs  mod.rs  node.rs  router.rs
src-tauri/src/app/core/types/: audio_frame.rs  device.rs  mod.rs  stream.rs
src-tauri/src/app/platform/: direct_route.rs  mod.rs
src-tauri/src/app/platform/windows/: device_manager.rs  endpoint_volume.rs  mod.rs  process_mapper.rs  session_manager.rs
src-tauri/src/app/platform/windows/virtual_driver/: mod.rs
src-tauri/src/app/platform/windows/wasapi/: input.rs  loopback.rs  mod.rs  output.rs  session.rs
(+34 files in other folders)
